# concept-learner

./: .gitignore  AGENTS.md  PLANS_NEXT.md  README.md  pyproject.toml
apps/: playground.py
concept_learner/: api.py  eval.py  generate_data.py  losses.py  scripts.py  train.py  train_baseline.py  visualize_model.py
concept_learner/data/: curriculum.py  episode_gen.py  multi_domain.py
concept_learner/model/: backbone.py  binder.py  domain.py  relation_head.py  vq_layer.py
concept_learner/teacher/: llm_teacher.py
docs/: ARCHITECTURE.md  CURRICULUM.md  PLAYGROUND.md  SCALING_PLAN.md  TRAINING_LOG.md  model_architecture.gv
scripts/: train.py  train_count.py  train_episodes.py
src/concept_learner/: __init__.py  compositions.py  decoder.py  encoder.py  episodes.py  eval_report.py  knn_memory.py  model.py  proto_router.py  reasoning.py  reasoning_ops.py  reasoning_v2.py  tokenizer.py  trainer.py  utils.py  vq_layer.py
tests/: conftest.py
tests/concept_learner/: test_encoder.py  test_model.py  test_reasoner_v2.py  test_reasoning_ops.py  test_tokenizer.py  test_trainer_utils.py  test_training.py  test_vq_layer.py
utils/: checkpoints.py  ema.py
