[tool.hatch.build.targets.sdist]
include = ["src/*"]
exclude = ["tests/*"] # on this later

[tool.hatch.build.targets.wheel]
include = ["src/*"]
exclude = ["tests/*"] # on this later

[tool.hatch.build.targets.wheel.sources]
"src/concept_learner" = "concept_learner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concept-learner"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [{ name = "Debjit Biswas" }]
license = "BSD-3-Clause"
readme = "README.md"
dependencies = [
  "pyrootutils",
  "loguru",
  "torch>=2.8.0",
  "tokenizers>=0.21.4",
  "transformers>=4.55.4",
  "vector-quantize-pytorch>=1.23.1",
]

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-pylint",
  "pytest-mypy",
  "pytest-testmon",
  "pytest-xdist",
  "nbmake",
  "taskipy>=1.14.1",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]

[tool.taskipy.tasks]
test = "pytest -q"
lint = "ruff check --fix src"
train = """
python scripts/train_episodes.py train \
  --steps 5000 --base10 --batch_size 512 --d_model 256 \
  --save_dir runs/episodes_b10 \
  --ckpt_every 500 --log_every 100 \
  --lr 8e-5 --sched cosine --warmup_ratio 0.03 --min_lr 1e-6 \
  --ema_decay 0.995 --weight_decay 0.003 --label_smoothing 0.03 \
  --lambda_vq 0.25 --lambda_stop 0.3
"""
setup = """
sudo apt update && sudo apt upgrade -y
sudo apt install tmux -y
cd /workspace/
git clone https://github.com/debjitbis08/concept-learner.git
cd concept-learner/
tmux new -s train
uv run task train | tee /var/log/train.log
"""
attach = "tmux attach -t train"
logs = "tail -f /var/log/train.log"