[tool.hatch.build.targets.sdist]
include = ["src/*"]
exclude = ["tests/*"] # on this later

[tool.hatch.build.targets.wheel]
include = ["src/*"]
exclude = ["tests/*"] # on this later

[tool.hatch.build.targets.wheel.sources]
"src/concept_learner" = "concept_learner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concept-learner"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [{ name = "Debjit Biswas" }]
license = "BSD-3-Clause"
readme = "README.md"
dependencies = [
  "pyrootutils",
  "loguru",
  "torch>=2.6.0",
  "tokenizers>=0.21.4",
  "transformers>=4.55.4",
  "vector-quantize-pytorch>=1.23.1",
]

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-pylint",
  "pytest-mypy",
  "pytest-testmon",
  "pytest-xdist",
  "nbmake",
  "taskipy>=1.14.1",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]

[tool.taskipy.tasks]
test = "pytest -q"
lint = "ruff check --fix src"
train = """
python scripts/train_episodes.py train \
  --steps 15000 --base10 --batch_size 512 --d_model 256 \
  --save_dir runs/episodes_b10 \
  --ckpt_every 500 --log_every 100 \
  --lr 8e-5 --sched cosine --warmup_ratio 0.03 --min_lr 1e-6 \
  --ema_decay 0.995 --weight_decay 0.003 --label_smoothing 0.03 \
  --lambda_vq 0.25 --lambda_stop 0.3 \
  --max_number 100 --train_range 0-79 --ood_range 80-99 \
  --frozen_mix --mix_ratio_id 0.45 --mix_ratio_bd 0.20 --mix_ratio_ood 0.25 --mix_ratio_cf 0.05 \
  --resume runs/episodes_b10/best.pt
"""
setup = """
apt update && sudo apt upgrade -y
apt install tmux vim -y
cd /workspace/concept-learner
tmux new -s train
uv sync
uv run task train | tee /var/log/train.log
"""
attach = "tmux attach -t train"
logs = "tail -f /var/log/train.log"
